fixed spacing mistakes

--- a/styles.css
+++ b/styles.css
@@ -15,17 +15,17 @@
   left: 50%;
   float: left;
 }
-#main-navbar ul li  {
-   float: left;
-   postition: relative;   
-   right: 50%
-   display: block;
+#main-navbar ul li {
+  float: left;
+  position: relative;
+  right: 50%;
+  display: block;
 }
 #main-navbar ul li a {
-	 display: block;
-	 padding: 10px 20px;
-	 color: #fff;
-	 text-decoration: none;
+  display: block;
+  padding: 10px 20px;
+  color: #fff;
+  text-decoration:  none;
 }
 #main-navbar ul li a:hover {
   background-color: #000;
@@ -51,6 +51,6 @@
   color: #fff;
   text-decoration: none;
 }
-sidebar ul li a:hover {
+#sidebar ul li a:hover {
 	background-color: #000;
 }
